# heterosense-fl-testbed

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: tests.yml
docs/: HeteroSense_FL_Tutorial_EN.docx  conf.py  index.rst  tutorial.md
examples/: quickstart.ipynb  temporal_plugin_example.py
heterosense/: __init__.py  baseline_demo.py  client_factory.py  dataset_builder.py  temporal_window_sampler.py  validation.py
heterosense/_core/: __init__.py  _behavior_model.py  _behavior_model_ext.py  _config_manager.py  _config_schema.py  _environment_model.py  _io_utils.py  _observation_model.py  _observation_model_ext.py
heterosense/_scripts/: quick_demo.py  run_benchmark.py
scripts/figures/: README.md  generate_fig1_architecture.py  generate_fig2_modality_bundles.py  generate_fig3_benchmark.py  generate_fig4_temporal_window.py  generate_fig5_comparison.py
tests/: conftest.py  test_client_factory.py  test_dataset_builder.py  test_temporal_window_sampler.py  test_validation.py
